<resources>
    <string name="app_name">Shopping Helper</string>
    <string name="summary">summary</string>
    <string name="send">send</string>
    <string name="email">testprogramos@gmail.com</string>
    <string name="chooserMessage">Choose app to send order by email...</string>
    <string name="emailSubject">Shopping order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="vegetables">vegetables</string>
    <string name="fruits">fruits</string>
    <string name="drinks">drinks</string>
    <string name="bakery">bakery</string>
    <string name="other">other</string>
    <string name="tomato">tomato</string>
    <string name="onion">onion</string>
    <string name="cucumber">cucumber</string>
    <string name="potato">potato</string>
    <string name="paprika">paprika</string>
    <string name="chive">chive</string>
    <string name="parsley">parsley</string>
    <string name="iceberg">iceberg</string>
    <string name="garlic">garlic</string>
    <string name="apple">apple</string>
    <string name="banana">banana</string>
    <string name="lemon">lemon</string>
    <string name="mandarin">mandarin</string>
    <string name="orange">orange</string>
    <string name="peach">peach</string>
    <string name="nectarine">nectarine</string>
    <string name="pear">pear</string>
    <string name="grape">grape</string>
    <string name="watermelon">watermelon</string>
    <string name="cherry">cherry</string>
    <string name="sweetCherry">sweetcherry</string>
    <string name="kiwi">kiwi</string>
    <string name="strawberry">strawberry</string>
    <string name="pineapple">pineapple</string>
    <string name="apricot">apricot</string>
    <string name="wrongQty">wrong quantity</string>
    <string name="toSend">go to summary</string>
    <string name="nothingOrdered">nothing ordered</string>
    <string name="notReady">activity not ready yet</string>
    <string name="water">water</string>
    <string name="sparklingWater">sparklingWater</string>
    <string name="fizzyDrink">fizzyDrink</string>
    <string name="cola">cola</string>
    <string name="juice">juice</string>
    <string name="beer">beer</string>
    <string name="vodka">vodka</string>
    <string name="slicedBread">slicedBread</string>
    <string name="wholeBread">wholeBread</string>
    <string name="rolls">rolls</string>
    <string name="sweetRolls">sweetRolls</string>
    <string name="donuts">donuts</string>
    <string name="pita">pita</string>
    <string name="toManyItems">to many items ordered</string>
    <string name="toothpaste">toothpaste</string>
    <string name="dishSoap">dishSoap</string>
    <string name="toiletPaper">toiletPaper</string>
    <string name="paperTowels">paperTowels</string>
    <string name="diapers">diapers</string>
    <string name="shavingMachines">shavingMachines</string>
    <string name="shavingFoam">shavingFoam</string>
    <string name="shampoo">shampoo</string>
    <string name="bubbleBath">buubleBath</string>
</resources>
