<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".VegetablesActivity"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/vegetablesImage"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="150dp"
            android:contentDescription="TODO"
            android:src="@drawable/vegetables" />
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
        <Button
            android:layout_column="0"
            android:id="@+id/tomatoPlus"
            android:onClick="incrementTomato"
            android:layout_row="0"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/tomato"/>
        <Button
            android:layout_column="1"
            android:id="@+id/tomato"
            android:layout_row="0"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="0"
            android:id="@+id/tomatoMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementTomato"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/onionPlus"
            android:onClick="incrementOnion"
            android:layout_row="1"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/onion"/>
        <Button
            android:layout_column="1"
            android:id="@+id/onion"
            android:layout_row="1"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="1"
            android:id="@+id/onionMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementOnion"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/cucumberPlus"
            android:onClick="incrementCucumber"
            android:layout_row="2"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/cucumber"/>
        <Button
            android:layout_column="1"
            android:id="@+id/cucumber"
            android:layout_row="2"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="2"
            android:id="@+id/cocumberMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementCucumber"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/potatoPlus"
            android:onClick="incrementPotato"
            android:layout_row="3"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/potato"/>
        <Button
            android:layout_column="1"
            android:id="@+id/potato"
            android:layout_row="3"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="3"
            android:id="@+id/potatoMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementPotato"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/paprikaPlus"
            android:onClick="incrementPaprika"
            android:layout_row="4"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/paprika"/>
        <Button
            android:layout_column="1"
            android:id="@+id/paprika"
            android:layout_row="4"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="4"
            android:id="@+id/paprikaMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementPaprika"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/chivePlus"
            android:onClick="incrementChive"
            android:layout_row="5"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/chive"/>
        <Button
            android:layout_column="1"
            android:id="@+id/chive"
            android:layout_row="5"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="5"
            android:id="@+id/chiveMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementChive"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/parsleyPlus"
            android:onClick="incrementParsley"
            android:layout_row="6"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/parsley"/>
        <Button
            android:layout_column="1"
            android:id="@+id/parsley"
            android:layout_row="6"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="6"
            android:id="@+id/parsleyMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementParsley"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/icebergPlus"
            android:onClick="incrementIceberg"
            android:layout_row="7"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/iceberg"/>
        <Button
            android:layout_column="1"
            android:id="@+id/iceberg"
            android:layout_row="7"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="7"
            android:id="@+id/icebergMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementIceberg"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/garlicPlus"
            android:onClick="incrementGarlic"
            android:layout_row="8"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/garlic"/>
        <Button
            android:layout_column="1"
            android:id="@+id/garlic"
            android:layout_row="8"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="8"
            android:id="@+id/garlicMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementGarlic"
            android:layout_columnWeight="1"/>
    </GridLayout>
        <Button
            android:id="@+id/infoSendVegetables"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/toSend"/>
    </LinearLayout>
</ScrollView>