<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <ImageView
        android:id="@+id/other"
        android:layout_width="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:src="@drawable/other" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">
        <Button
        android:layout_column="0"
        android:id="@+id/toothpastePlus"
        android:onClick="incrementToothpaste"
        android:layout_row="0"
        android:layout_height="50dp"
        android:layout_width="0dp"
        android:layout_columnWeight="3"
        android:text="@string/toothpaste"/>
        <Button
        android:layout_column="1"
        android:id="@+id/toothpaste"
        android:layout_row="0"
        android:layout_height="50dp"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:text="@string/zero"/>
        <Button
        android:layout_row="0"
        android:id="@+id/toothpasteMinus"
        android:layout_column="2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/minus"
        android:onClick="decrementToothpaste"
        android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/dishSoapPlus"
            android:onClick="incrementDishSoap"
            android:layout_row="1"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/dishSoap"/>
        <Button
            android:layout_column="1"
            android:id="@+id/dishSoap"
            android:layout_row="1"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="1"
            android:id="@+id/dishSoapMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementDishSoap"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/toiletPaperPlus"
            android:onClick="incrementToiletPaper"
            android:layout_row="2"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/toiletPaper"/>
        <Button
            android:layout_column="1"
            android:id="@+id/toiletPaper"
            android:layout_row="2"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="2"
            android:id="@+id/toiletPaperMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementToiletPaper"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/paperTowelsPlus"
            android:onClick="incrementPaperTowels"
            android:layout_row="3"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/paperTowels"/>
        <Button
            android:layout_column="1"
            android:id="@+id/paperTowels"
            android:layout_row="3"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="3"
            android:id="@+id/paperTowelsMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementPaperTowels"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/diapersPlus"
            android:onClick="incrementDiapers"
            android:layout_row="4"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/diapers"/>
        <Button
            android:layout_column="1"
            android:id="@+id/diapers"
            android:layout_row="4"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="4"
            android:id="@+id/diapersMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementDiapers"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/shavingMachinesPlus"
            android:onClick="incrementShavingMachines"
            android:layout_row="5"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/shavingMachines"/>
        <Button
            android:layout_column="1"
            android:id="@+id/shavingMachines"
            android:layout_row="5"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="5"
            android:id="@+id/shavingMachinesMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementShavingMachines"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/shavingFoamPlus"
            android:onClick="incrementShavingFoam"
            android:layout_row="6"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/shavingFoam"/>
        <Button
            android:layout_column="1"
            android:id="@+id/shavingFoam"
            android:layout_row="6"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="6"
            android:id="@+id/shavingFoamMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementShavingFoam"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/shampooPlus"
            android:onClick="incrementShampoo"
            android:layout_row="7"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/shampoo"/>
        <Button
            android:layout_column="1"
            android:id="@+id/shampoo"
            android:layout_row="7"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="7"
            android:id="@+id/shampooMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementShampoo"
            android:layout_columnWeight="1"/>
        <Button
            android:layout_column="0"
            android:id="@+id/bubbleBathPlus"
            android:onClick="incrementBubbleBath"
            android:layout_row="8"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/bubbleBath"/>
        <Button
            android:layout_column="1"
            android:id="@+id/buubleBath"
            android:layout_row="8"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:text="@string/zero"/>
        <Button
            android:layout_row="8"
            android:id="@+id/bubbleBathMinus"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/minus"
            android:onClick="decrementBubbleBath"
            android:layout_columnWeight="1"/>
    </GridLayout>
        <Button
            android:id="@+id/infoSendOther"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/toSend"/>
    </LinearLayout>



</ScrollView>