<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".BakeryActivity"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bakery"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="150dp"
            android:contentDescription="TODO"
            android:src="@drawable/bread" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <Button
                android:layout_column="0"
                android:id="@+id/slicedBreadPlus"
                android:onClick="incrementSlicedBread"
                android:layout_row="0"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="3"
                android:text="@string/slicedBread"/>
            <Button
                android:layout_column="1"
                android:id="@+id/slicedBread"
                android:layout_row="0"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="0"
                android:id="@+id/slicedBreadMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementSlicedBread"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_column="0"
                android:id="@+id/wholeBreadPlus"
                android:onClick="incrementWholeBread"
                android:layout_row="1"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="3"
                android:text="@string/wholeBread"/>
            <Button
                android:layout_column="1"
                android:id="@+id/wholeBread"
                android:layout_row="1"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="1"
                android:id="@+id/wholeBrreadMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementWholeBread"
                android:layout_columnWeight="1"/>

            <Button
            android:layout_column="0"
            android:id="@+id/rollsPlus"
            android:onClick="incrementRolls"
            android:layout_row="2"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:text="@string/rolls"/>
            <Button
                android:layout_column="1"
                android:id="@+id/rolls"
                android:layout_row="2"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="2"
                android:id="@+id/rollsMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementRolls"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_column="0"
                android:id="@+id/sweetRoolsPlus"
                android:onClick="incrementSweetRolls"
                android:layout_row="3"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="3"
                android:text="@string/sweetRolls"/>
            <Button
                android:layout_column="1"
                android:id="@+id/sweetRolls"
                android:layout_row="3"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="3"
                android:id="@+id/sweetRollsMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementSweetRolls"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_column="0"
                android:id="@+id/dunutsPlus"
                android:onClick="incrementDonuts"
                android:layout_row="4"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="3"
                android:text="@string/donuts"/>
            <Button
                android:layout_column="1"
                android:id="@+id/donuts"
                android:layout_row="4"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="4"
                android:id="@+id/donutsMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementDonuts"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_column="0"
                android:id="@+id/pitaPlus"
                android:onClick="incrementPita"
                android:layout_row="5"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="3"
                android:text="@string/pita"/>
            <Button
                android:layout_column="1"
                android:id="@+id/pita"
                android:layout_row="5"
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:text="@string/zero"/>
            <Button
                android:layout_row="5"
                android:id="@+id/pitaMinus"
                android:layout_column="2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/minus"
                android:onClick="decrementPita"
                android:layout_columnWeight="1"/>
        </GridLayout>
        <Button
            android:id="@+id/infoSendBakery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/toSend"/>
    </LinearLayout>
</ScrollView>